fix username overflow when too long, add title to username span so rollover displays full name

--- a/app/public/stylesheets/sass/_components/_user.scss
+++ b/app/public/stylesheets/sass/_components/_user.scss
@@ -27,6 +27,10 @@
 .user_name {
     font-size: 12px;
     color: #fff;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 128px;
 }
 
 .user_logOut {
